Fixed a few small layout issues

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -102,6 +102,9 @@ p {
 
 .section {
   padding: 100px 0;
+  margin: 70px auto;
+  max-width: 1260px;
+  padding: 0 2rem;
 }
 
 /* Colors */
